2004-11-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: Add ec-fonts-mftraced to ~/.fonts.conf.
	Grok ec-fonts, braces and dynamics.

	* scm/framework-gnome.scm (gnome-main): Register braces with pango.

2004-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-gnome.scm (text): comment dribble.

2004-11-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/pangofc-afm-decoder.cc (main): Test more feta fonts.

	* scm/output-gnome.scm (bezier-sandwich): New function.  Reset
	path-def before using.  Fixes muchtomany slurs in wrong places
	bug.

2004-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/grob-scheme.cc (LY_DEFINE): add new function ly:grob-key.

	* lily/include/object-key-undumper.hh (Module): new file.

	* lily/object-key-undumper.cc (Module): New file. Deserialize
	keys. SCM bindings

	* lily/object-key-dumper.cc (Object_key_dumper): idem.
	Provide SCM bindings.

	* lily/include/object-key-dumper.hh (class Object_key_dumper): 
	new file. Serialize object keys.
	
	* lily/object-key.cc (dump): new function.
	(as_scheme): new virtual function
	(undump): new function
	(undumpers): new table.

	* lily/include/global-context.hh (Context): take \score key upon init.

	* lily/object-key-dumper.cc (serialize_key): new file.

	* lily/include/object-key-dumper.hh (class Object_key_dumper): new file.

	* lily/lily-lexer.cc: remove \quote.

	* lily/lookup.cc (triangle): rewrite, obviating symmetric_x_triangle().

	* lily/context.cc (Context): take key argument in ctor.
	(create_context): new function

	* lily/grob.cc (Grob): take key argument in ctor.  

	* lily/lilypond-key.cc (do_compare): new file.

	* lily/object-key.cc (Object_key): new file.

	* lily/include/object-key.hh (class Object_key): new file.

	* lily/include/lilypond-key.hh (class Lilypond_context_key): new file.

2004-11-13  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: add small warning about
	noindent default in lilypond-book.
