@@ -7,6 +7,13 @@
 
 2004-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/include/tweak-registration.hh: new file.
+
+	* lily/tweak-registration.cc: new file.
+
+	* scm/framework-gnome.scm (save-tweaks): use new key mechanism for
+	saving tweaks.
+
 	* scm/output-gnome.scm (text): comment dribble.
 
 2004-11-14  Jan Nieuwenhuizen  <janneke@gnu.org>
